- Let users select Trump